# cmake

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.cpp
shared_lib/: CMakeLists.txt
shared_lib/include/: my_math.h
shared_lib/src/: my_math.cpp
